updates for qcon

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -12,7 +12,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="stylesheet" href="css/reveal.min.css">
+    <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/default.css" id="theme">
 
     <!-- For syntax highlighting -->
@@ -35,47 +35,44 @@
 
 <div class="slides">
 <section>
-    <h1> Scaling GILT </h1><br>
+    <h1> Scaling GILT </h1>
 
-    <h3> From Monolith Ruby App <br><br> to <br><br> Distributed Scala Micro-Services</h3>
+    <h3> From Monolith Ruby App to Distributed Scala Micro-Services</h3>
     <br>
-    <h4> #NYCTechTalks </h4>
-    <p>
-        <small><a href="http://yonigoldberg.com">Yoni (Jonathan) Goldberg</a> </small><br>
-        <small>Lead Engineer - GILT </small> <br>
-        <small> Podium => http://bit.ly/podiumapp </small>
+    <h3>QCon - NYC - 2014</h3>
+
+        <h3> <a href="http://yonigoldberg.com"> Yoni (Jonathan) Goldberg</a></h3>
     </p>
 </section>
-<!--about me -->
+
 <section>
-    <h2>About Me</h2>
     <p>
-        - Leading the Popeye Team <br>
-        - Sale Personalization, Loyalty, SEO <br> Post-purchase, Login/Registration flows <br><br>
+        - GiltDirect, Sale Personalization, Loyalty, SEO, Post-purchase, Login/Registration <br><br>
         - MIT CS BS/Meng | Google | IBM | IDF <br><br>
-        - Brooklyn | Coffee | Arduino | Running | Kite Surfing | Online Collaboration | Poker  <br>
+        - Israel | Brooklyn | Coffee | JS/Node | Arduino | Running | Kite Surfing | Poker  <br>
         <br>
     </p>
-        <h3> Excited to be part of the NYC Tech community </h3>
 </section>
 
 <!-- Takeaways -->
 <section>
-         <h2>The lessons and challenges that we had/have with<br>
-             micro-service architecture
-         </h2>
+         <h3>The lessons and challenges that we had/have with<br>
+             micro-service architecture <!--, and whether Microservice is the right choice for you...-->
+         </h3>
     <aside class="notes">
         This talk is just one example of a journey, there are plenty of other ways to solve the same
         issues but I hope that you will get something out of it
     </aside>
 </section>
+
+
 <section>
     <img width="480" height="360" src="img/shit.jpeg">
 </section>
 
 <!-- GILT's history -->
 
-<section data-background="#FF8F00">
+<section>
     <h2> What is GILT? </h2>
 
     Flash Sales Business <br>
@@ -85,14 +82,12 @@
 
 </section>
 <section>
-<img src="img/gilt.png"/>
+<img width="777" height="700" src="img/gilt.jpg"/>
 </section>
 <section>
     <h2> Another way to look at Gilt</h2>
-    <img src="img/spikes.png"/>
-    <h3> Three day traffic pattern</h3>
+    <img height="300px" src="img/spikes.png"/>
 </section>
-
 
 <section>
     <h1> The Classic Startup Story </h1>
@@ -101,7 +96,7 @@
 <section>
     <h2>The early days</h2>
 
-    <p> 2007 - Ruby on Rails the hottest new thing </p>
+    <p> 2007 - Ruby on Rails <br> the hottest new thing </p>
     <br>
     <p> The goal was to get to market fast </p>
 
@@ -115,7 +110,7 @@
     <img src="img/monolith.jpg">
 </section>
 <section>
-    <h2> We were able to handle our traffic pretty well</h2>
+    <h3> We were able to handle our traffic pretty well</h3>
     <img width="512" height="394" src="img/spike.jpg">
     <aside class="notes">
        scale was ok things worked <fine></fine>
@@ -136,8 +131,7 @@
         <li> Routing traffic between ruby processes sucked</li>
     </ul>
     <br>
-    <br>
-    <p> |Note to self| - hide from the ruby fan boys</p>
+    <small> |Note to self| hide from the ruby fans</small>
 </section>
 
 <section>
@@ -152,7 +146,7 @@
 
 <section>
     <h2> We needed to solve<br> the problem fast </h2>
-    <img width="466" height="420" src="img/money.jpg">
+    <img width="466" height="350" src="img/money.jpg">
     <aside class="notes">
         - Invested money
         - Money we lost, shitty customer experience
@@ -179,15 +173,6 @@
          <li> Better GC vs MRI</li>
      </ul>
 </section>
-<!---
-<section>
-    <h2> Jruby vs Java </h2> </br>
-    <h3> Java Won <br> Passionate developer with better POC </h3>
-<aside class="notes">
-    JSP VS ERB
-</aside>
-</section>
-     -->
 
 <section>
     <h2> First 10 Services </h2>
@@ -204,12 +189,18 @@
     <br>
 </section>
 
-<section>
-    <h2> Pain points </h2>
+<section id="solved-pain-points">
+    <h2 style="width:1100px"> Solved Pain Points </h2>
     <ul>
         <li style="text-decoration: line-through"> Spike required to launch 1,000s of ruby processes </li>
         <li style="text-decoration: line-through"> Postgres was overloaded </li>
         <li style="text-decoration: line-through"> Routing traffic between ruby processes sucked</li>
+    </ul>
+</section>
+
+<section id="solved-pain-points">
+    <h2 style="width:1100px"> Still Open Pain Points </h2>
+    <ul>
         <li> New services became semi-monolithic </li>
         <li> 1000 Models/Controllers, 200K LOC, 100s of jobs  </li>
         <li> Lots of contributors + no ownership </li>
@@ -217,28 +208,69 @@
     </ul>
 </section>
 
+
 <section>
     <h2> Why we doubled down on <br> Micro-Services </h2>
     <ul>
         <li> Empower teams and ownership </li>
-        <li> Smaller scope </li>
-        <li> Simpler and Easier deployments and rollbacks</li>
+        <li> Smaller scope easier to understand </li>
+        <li> Simpler and Easier deployments and rollbacks </li>
     </ul>
 </section>
 
 <section>
-    <h2> Micro Service Architecture started to get traction</h2>
+    <h3> We began the transition to Scala and Play </h3>
     <br>
+    <h3> LOSA - Lots Of Small (Web) Apps </h3> <br>
+    <p> Same as micro-services but for web-apps </p>
+
 </section>
 
 <section>
-    <h2> As of last week we have more than <br> 450 services </h2>
-    <img src="img/service_count.png">
+    <h3> As of last week we have more than <br> 300 services in Prod</h3>
+    <img width="700" height="400" src="img/microservices _graph.jpg">
 </section>
 
+<section>
+    <section>
+    <h2> Demo </h2>
+    </section>
+    <section>
+        <img src="img/mosaic.png">
+    </section>
+
+    <section>
+        <img src="img/search.png">
+    </section>
+
+    <section>
+        <img src="img/detail.png">
+    </section>
+
+    <section>
+        <img src="img/insider.png">
+    </section>
+
+    <section>
+        <img src="img/stat1.png">
+    </section>
+
+   <section>
+        <img src="img/stat2.png">
+    </section>
+
+    <section>
+        <img src="img/stat3.png">
+    </section>
+
+</section>
+<section>
+    <h3> why the increase? </h3>
+    <img width="700" height="400" src="img/microservices _graph.jpg">
+</section>
 <section>
     <h2> App Bootstrap </h2>
-     <pre><code data-trim contenteditable>
+     <pre><code data-trim>
     rake bootstrap:admin-web           # Bootstrap a admin-web service
     rake bootstrap:babylon-docs        # Bootstrap a babylon-docs service
     rake bootstrap:client-server-core  # Bootstrap a client-server-core service
@@ -252,10 +284,10 @@
 </section>
 
 <section>
-    <h2> We began the transition to scala and play </h3></h2>
+    <h2> How to define a Microservice? </h2>
     <br>
-    <h3> LOSA - Lots Of Small Apps </h3>
-    <h3> Same motivation and benefits of Micro-Service Architecture </h3>
+     <h3> Functionality scope </h3>
+     <h3> Number of devs involved </h3>
 </section>
 
 <section>
@@ -265,18 +297,86 @@
 <section>
     <h2> New challenges</h2>
     <ul>
+        <li> Deployments and Testing (Functional/Integration) </li>
         <li> Dev/Integration Environments </li>
         <li> Who owns this service!? </li>
         <li> Monitoring </li>
-        <li> Deployments and Testing (Functional/Integration) </li>
     </ul>
 </section>
 
-<section data-background="#3C7DC4">
-    <h2> On Dev/Integration Environments </h2>
+<section>
+  <h2> On Deployments and Testing </h2>
+  <br>
+    <q> "Testing is HARD" - <br> the dev that sits on your left</q>
+</section>
+<section>
+    <h2> The challenges that we faced: </h2>
+        <ul>
+            <li> Hard to execute functional tests between services</li>
+            <li> Frustrating to deploy semi-manually (Capistrano)</li>
+            <li> Scary to deploy other teams services</li>
+        </ul>
+</section>
+
+<section>
+    <h2> SBT </h2>
+    <ul>
+        <li> Motivation: Scala adaption </li>
+        <li> Complex Scala syntax</li>
+        <li> Cool features: ~test, shell, console</li>
+        <li> Hard to debug </li>
+    </ul>
+
+</section>
+<section>
+    <h2>  GILT-SBT-BUILD</h2>
+    <ul>
+        <li> Simple config for all the services </li>
+
+        <li> Pulls many plugins: <br>
+        [nexus, testing, RPMs, run scripts, Monitoring, SemVer, ...] </li>
+
+        <li>Custom commands (e.g 'sbt release') </li>
+    </ul>
+</section>
+
+<!--
+<section>
+    <pre><code data-trim contenteditable>
+        object Build extends ClientServerCoreProject with Dependencies {
+            val name = 'svc-sale-activation'
+            val coreDeps = ....
+            val serverDeps = ...
+            val clientDeps = ...
+
+          override val ioncannonTrack = IonCannon.FastTrack
+        }
+    </code></pre>
+</section>
+-->
+
+<section>
+        <h2> Ion-Cannon + SBT </h2>
+        <ul>
+            <li>Run tests on dedicated Env </li>
+            <li>Supports Canary releases</li>
+            <li>Easy rollbacks</li>
+            <li>Integrated health checks</li>
+        </ul>
+</section>
+
+<section>
+   <img src="img/ion-cannon.png"/>
+</section>
+
+
+
+<section>
+    <h3> On Dev/Integration Environments </h3>
     <ul>
         <li> The hardware is not strong enough </li>
         <li> No one wants to compile 20 services </li>
+        <li> Service Dependencies </li>
     </ul>
     <img width="500" height="300" src="img/macbook.jpg">
 </section>
@@ -317,12 +417,31 @@
 </section>
 
 <section>
-    <h3> The Future</h3>
-    <img src="img/Docker.png"/>
+        <section>
+            <h3> Dependency Fun </h3>
+        </section>
+           <section>
+            <img src="img/dep1.png">
+        </section>
+
+        <section>
+            <img src="img/dep2.png">
+        </section>
+
+        <section>
+            <img src="img/dep3.png">
+        </section>
 </section>
 
 <section>
-  <h2> Docker </h2>
+    <h2> The Future</h2>
+    <h3> Focus on minimizing dependencies </h3>
+    <img src="img/docker-logo.png"/>
+    <img height="331px" width="250px" src="img/amazon.jpeg"/>
+</section>
+
+<section>
+  <h3> Docker </h3>
    <h3>
      An extension to Linux Containers (LXC)
    </h3>
@@ -331,11 +450,11 @@
         <li> Simple Configurations </li>
         <li> Much lighter than a VM </li>
         <li> Immutable </li>
-        <li> Supports services and platforms </li>
+        <li> Supports multiple platforms </li>
     </ul>
 </section>
 
-<section data-background="#5A8F29">
+<section>
     <h2>On Ownership </h2>
     <br>
     <q> "code stays much longer than people" - SB</q>
@@ -358,13 +477,7 @@
     <img src="img/gerrit1.png">
 </section>
 <section>
-    <img src="img/gerrit3.png">
-    <aside class="notes">
-        - Gerrit is open-source
-        - Code reviews are handled per commit / optional
-        - Great history + clear approval process
-        - Easy integration with jenkins
-    </aside>
+    <img height="550" width="770" src="img/gerrit3.png">
 </section>
 
 <section>
@@ -374,25 +487,26 @@
 <section>
     <h2> We transitioned to Micro-DBS </h2>
     <h3>Third of the services have their own </h3>
-    <br><br>
-    <h3>MongoDB
-        <br><br>Postgres <br><br> Voldemort </h3>
+    <h3>MongoDB  | Postgres | Voldemort </h3>
 </section>
 <section>
-    <h2> Manage Micro-Relational DBs <br> Schema Evolution Manager </h2>
+    <h2> Manage Micro-Relational DBs </h2>
+    <br>
+    <h2> Schema Evolution Manager </h2>
     <a href="https://github.com/gilt/schema-evolution-manager">https://github.com/gilt/schema-evolution-manager </a>
 </section>
 <section>
     <h2> Principles of <br> Schema Evolution Manager </h2>
-    <ul>
+    <ul style="width:1300px">
         <li> Can manage the schema evolutions in a Git repo </li>
         <li> Schema changes are deployed as tar flies </li>
         <li> No rollbacks</li>
         <li> Schema changes are required to be incremental </li>
     </ul>
 </section>
+<!--
 <section>
-            <pre><code data-trim contenteditable>
+            <pre><code contenteditable>
                 echo "create table releases (id integer)" > new.sql
                 sem-add ./new.sql #Created a git commit
                 sem-dist # generates the tar e.g schema-ion-cannon0.0.2.tar.gz
@@ -401,13 +515,14 @@
                 sem-apply host --localhost --name ion-cannon --user ion-cannon-usr
             </code> </pre>
 </section>
+!-->
 
-<section data-background="#3C7DC4">
+<section>
     <h2> On Monitoring</h2>
 </section>
 
 <section>
-    <img src="img/boundary1.png"/>
+    <img height="650" width="700" src="img/boundary1.png"/>
 </section>
 
 <section>
@@ -443,82 +558,35 @@
 </section>
 
 
-<section data-background="#5A8F29">
-  <h2> On Deployments <br>and Testing (Functional/Integration) </h2>
-    <q> "Testing is HARD" - the dev that sits on your left</q>
-</section>
-<section>
-    <h2> The challenges that we faced: </h2>
-        <ul>
-            <li> Hard to execute functional tests between services</li>
-            <li> Frustrating to deploy semi-manually (Capistrano)</li>
-            <li> Scary to deploy other teams services</li>
-        </ul>
-</section>
-
-<section>
-    <h2> SBT </h2>
-    <ul>
-        <li> Motivation: Scala adaption </li>
-        <li> Complex Scala syntax</li>
-        <li> Cool features: ~test, shell, console</li>
-        <li> Hard to debug </li>
-    </ul>
-
-</section>
-<section>
-    <h2>  GILT-SBT-BUILD</h2>
-    <ul>
-        <li> Simple config for all the services </li>
-
-        <li> Pulls many plugins: <br>
-        [nexus, testing, RPMs, run scripts, Monitoring, SemVer, ...] </li>
-
-        <li>Custom commands (e.g 'sbt release') </li>
-    </ul>
-</section>
-
-<section>
-    <pre><code data-trim contenteditable>
-        object Build extends ClientServerCoreProject with Dependencies {
-            val name = 'svc-sale-activation'
-            val coreDeps = ....
-            val serverDeps = ...
-            val clientDeps = ...
-
-          override val ioncannonTrack = IonCannon.FastTrack
-        }
-    </code></pre>
-</section>
-
-<section>
-        <h2> Ion-Cannon + SBT </h2>
-        <ul>
-            <li>Run functional/Selenium tests on dedicated Env </li>
-            <li>Supports Canary releases</li>
-            <li>Easy rollbacks</li>
-            <li>Integrated health checks</li>
-        </ul>
-</section>
-
-<section>
-   <img src="img/ion-cannon.png"/>
-</section>
-
 
 <!-- Summary-->
 <section>
 
     <h2> Main Takeaways </h2>
-    <ul>
-        <li>Simplicity - Do you really need it?</li>
-        <li> We feel that it was the right choice for us</li>
-        <li>MicroServices promise works for most cases </li>
-        <li>As of 2014 - You will need to invest in Tools!</li>
+    <ul style="width:1100px">
+        <li> Simplicity - Do you really need it?</li>
+        <li> We feel that it was the right choice for us </li>
+        <li> MicroServices promise works for most cases </li>
+        <li> As of 2014 - You will need to invest in Tools!</li>
     </ul>
 </section>
+
 <section>
-            <h1> Podium Time</h1>
+  <h3> Cheat Sheet </h3>
+  <ul>
+        <li> Your organization has > 30 developers? </li>
+        <li> Deployments and integrations are difficult [You need a team for that]</li>
+        <li> You can abstractly separate features and parts of the site </li>
+        <li> Special hardware needs for some features </li>
+    </ul>
+</section>
+
+<section>
+    <h2> Build your next feature in a new service </h2>
+</section>
+
+<section>
+            <h1> Question Time</h1>
                 <br><br>
             <p>
                 We are hiring...
@@ -528,21 +596,15 @@
             jgoldberg@gilt.com <br>
             <a href=http://www.yonigoldberg.com> www.yonigoldberg.com </a>
 
-
-</section>
-
 <section>
-    END!
-</section>
-
-<section>
-    <h1> Scala Break </h1>
+                <h1> Scala Break </h1>
 </section>
 
 <section>
     <h2> Why switch to Scala from Java </h2>
     <ul>
         <li> Object-Functional Programming </li>
+        <li> Akka </li>
         <li> Immutability that leads to easier concurrency </li>
         <li> Great libraries: like Salat, Scalaz</li>
         <li> Less boilerplate code - e.g Case classes, App</li>
@@ -551,25 +613,13 @@
         <li> Cake Pattern </li>
         <li> Console </li>
         <li> SBT (in scala, release process)</li>
-        <li> Akka </li>
-        <li> No Nulls by default </li>
-
+        <li> Option </li>
     </ul>
 </section>
 
-<section>
-    <h2> Why Not switch to Scala from Java </h2>
-    <ul>
-        <li> Learning Curve</li>
-        <li> SBT is not that simple </li>
-        <li> Harder debugging in some cases </li>
-        <li> Still early - version upgrades </li>
-        <li> It allows many styles of coding - We are still in the progress of  </li>
-        <li> A lot of hard to read methods like: ":+", "++"  </li>
-        <li> Can be tricky to integrate with Java code </li>
-    </ul>
 </section>
 
+<!--- Scripts -->
 <script src="lib/js/head.min.js"></script>
 <script src="js/reveal.min.js"></script>
 
@@ -602,6 +652,5 @@
     });
 
 </script>
-
 </body>
 </html>
