more qcon changes

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -39,7 +39,7 @@
 
     <h3> From Monolith Ruby App to Distributed Scala Micro-Services</h3>
     <br>
-    <h3>QCon - NYC - 2014</h3>
+    <h3>QCon - Brooklyn - 2014</h3>
 
         <h3> <a href="http://yonigoldberg.com"> Yoni (Jonathan) Goldberg</a></h3>
     </p>
@@ -213,7 +213,7 @@
     <h2> Why we doubled down on <br> Micro-Services </h2>
     <ul>
         <li> Empower teams and ownership </li>
-        <li> Smaller scope easier to understand </li>
+        <li> Smaller scope </li>
         <li> Simpler and Easier deployments and rollbacks </li>
     </ul>
 </section>
@@ -418,7 +418,7 @@
 
 <section>
         <section>
-            <h3> Dependency Fun </h3>
+            <h3> Dependency Fun [Demo]</h3>
         </section>
            <section>
             <img src="img/dep1.png">
@@ -553,35 +553,36 @@
 </section>
 
 <section>
-    <img src="img/old_solr.png"/>
-    <img src="img/current_solr.png"/>
+    <img height="300px" src="img/old_solr.png"/>
+    <img height="300px" src="img/current_solr.png"/>
 </section>
 
 
 
 <!-- Summary-->
 <section>
-
-    <h2> Main Takeaways </h2>
-    <ul style="width:1100px">
-        <li> Simplicity - Do you really need it?</li>
-        <li> We feel that it was the right choice for us </li>
-        <li> MicroServices promise works for most cases </li>
-        <li> As of 2014 - You will need to invest in Tools!</li>
-    </ul>
-</section>
-
-<section>
   <h3> Cheat Sheet </h3>
   <ul>
         <li> Your organization has > 30 developers? </li>
         <li> Deployments and integrations are difficult [You need a team for that]</li>
-        <li> You can abstractly separate features and parts of the site </li>
-        <li> Special hardware needs for some features </li>
+        <li> You can abstractly separate features and parts of your site </li>
+        <li> Special hardware or performance needs for some features </li>
     </ul>
 </section>
 
 <section>
+
+    <h2> Main Takeaways </h2>
+    <ul style="width:1100px">
+        <li> Simplicity - Do you really need it?</li>
+        <li> MicroServices promise works for most cases </li>
+        <li> As of 2014 - You will need to invest in Tools!</li>
+        <li> We feel that it was the right choice for us </li>
+    </ul>
+</section>
+
+<section>
+    <h2> What's next ? </h2>
     <h2> Build your next feature in a new service </h2>
 </section>
 
@@ -592,16 +593,16 @@
                 We are hiring...
             </p>
 
-            Keep in touch: <br>
             jgoldberg@gilt.com <br>
             <a href=http://www.yonigoldberg.com> www.yonigoldberg.com </a>
+</section>
 
 <section>
                 <h1> Scala Break </h1>
 </section>
 
 <section>
-    <h2> Why switch to Scala from Java </h2>
+    <h3> Why switch to Scala from Java </h3>
     <ul>
         <li> Object-Functional Programming </li>
         <li> Akka </li>
@@ -609,15 +610,20 @@
         <li> Great libraries: like Salat, Scalaz</li>
         <li> Less boilerplate code - e.g Case classes, App</li>
         <li> Scala's Collections </li>
+    </ul>
+</section>
+
+    <section>
+   <ul>
         <li> Traits </li>
         <li> Cake Pattern </li>
         <li> Console </li>
         <li> SBT (in scala, release process)</li>
         <li> Option </li>
     </ul>
-</section>
 
-</section>
+    </section>
+
 
 <!--- Scripts -->
 <script src="lib/js/head.min.js"></script>
